# OpenRCT2-TrackGenerator

./: .gitignore  .yamllint.yaml  README.md  pyproject.toml
.github/workflows/: pytest.yml
examples/: demo_track.yaml
examples/meshes/: track_tile.mtl
openrct2_track_generator/: __init__.py  __main__.py  _sprite_rotations.py  constants.py  curves.py  deform.py  exporter.py  groups.py  lift.py  loader.py  masks.py  offsets.py  section_renderer.py  sections.py  subpositions.py  supports.py  types.py
openrct2_track_generator/masks/: default.json
scripts/: _buildlib.py  build_plugin_local.py  collect_wheels.py
scripts/ci/: set_version.py
tests/: test_curves.py  test_deform.py  test_exporter.py  test_groups.py  test_lift.py  test_loader.py  test_main.py  test_masks.py  test_offsets.py  test_section_renderer.py  test_sections.py  test_subpositions.py  test_supports.py
track_renderer_addon/: README.md  __init__.py  blender_manifest.toml  operators.py  panels.py  props.py  scene_to_track.py
